--- a/sgcc_alert/templates/dashboard.html
+++ b/sgcc_alert/templates/dashboard.html
@@ -1,231 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>SGCC Dashboard</title>
+
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <style>
-        body {
-            padding: 20px;
-        }
-        .chart-container {
-            width: 100%;
-            max-width: 600px;
-            margin: auto;
-        }
-    </style>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:400,600,700" rel="stylesheet">
+
+    <link rel="stylesheet" href="../static/assets/styles.css"/>
 </head>
+
 <body>
-    <h1 class="text-center">Dashboard</h1>
+<div id="wrapper">
 
-    <div class="container mt-4">
-        <!-- 筛选器 -->
-        <div class="row">
-            <div class="col-md-4">
-                <label for="residentSelector">户号</label>
-                <select class="form-control" id="residentSelector">
-                    <option value="">选择户号</option>
-                </select>
+    <div class="content-area">
+        <div class="container-fluid">
+            <div>
+                <h1 class="text-center">电力使用统计</h1>
             </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <label for="residentSelector">户号</label>
+                    <select class="form-control" id="residentSelector">
+                        <option value="">选择户号</option>
+                    </select>
+                </div>
 
-            <div class="col-md-4">
-                <label for="dateRange">日期</label>
-                <input type="text" class="form-control" id="dateRange">
-            </div>
+                <div class="col-md-4">
+                    <label for="dateRange">日期</label>
+                    <input type="text" class="form-control" id="dateRange">
+                </div>
 
-            <div class="col-md-4">
-                <label for="fetchBalanceBtn">查询</label>
-                <button id="fetchBalanceBtn" class="btn btn-primary btn-block">查询</button>
+                <div class="col-md-4">
+                    <label for="queryButton">查询</label>
+                    <button id="queryButton" class="btn btn-primary btn-block">查询</button>
+                </div>
             </div>
-        </div>
-
-        <div class="row mt-5">
-            <div class="col-md-4">
-                <h3>当前余额</h3>
-                <p id="currentBalance">请选择户号和日期</p>
-            </div>
-            <div class="col-md-12 chart-container">
-                <label for="usageChart">每月用电量</label>
-                <canvas id="usageChart"></canvas>
+            <div class="main">
+                <div class="row sparkboxes mt-4 mb-4">
+                    <div class="col-md-12">
+                        <label>近期用电统计</label>
+                        <div class="box box1">
+                            <div id="latestBalanceSparkline"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-5 mb-4">
+                    <div class="col-md-12">
+                        <label>月度统计趋势</label>
+                        <div class="box box1">
+                            <div id="monthlyUsageChartOption"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script>
-        let usageChartInstance = null;
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+<script src="../static/assets/scripts.js"></script>
 
-        async function fetchResidents() {
-            const response = await axios.get('/api/v1.0/residents');
-            const data = response.data;
-            const residentSelector = document.getElementById('residentSelector');
-            if (data.data?.length > 0) {
-                residentSelector.innerHTML = '';
-                data.data.forEach(resident => {
-                    const option = document.createElement('option');
-                    option.value = resident.resident_id;
-                    option.textContent = resident.resident_address;
-                    residentSelector.appendChild(option);
-                });
-
-                residentSelector.value = data.data[0].resident_id;
-                fetchLatestBalanceData(data.data[0].resident_id);
-                const dateRange = document.getElementById('dateRange').value.split(' to ');
-                const startDate = dateRange[0];
-                const endDate = dateRange[1];
-                fetchDailyUsageData(data.data[0].resident_id, startDate, endDate);
-            }
-        }
-
-        async function fetchLatestBalanceData(residentId) {
-            const url = `/api/v1.0/residents/${residentId}/balances?order_by=date&order=desc&limit=1`;
-            const response = await axios.get(url);
-            const data = response.data;
-
-            if (data.data.length > 0) {
-                const latestData = data.data[0];
-                document.getElementById('currentBalance').textContent = `余额: ${latestData.balance} (日期: ${latestData.date})`;
-            } else {
-                document.getElementById('currentBalance').textContent = '没有数据';
-            }
-        }
-
-        async function fetchDailyUsageData(residentId, startDate, endDate) {
-            const url = `/api/v1.0/residents/${residentId}/usages?start_date=${startDate}&end_date=${endDate}&granularity=monthly`;
-            const response = await axios.get(url);
-            const data = response.data
-
-            if (data.data.length > 0) {
-                const ctx = document.getElementById('usageChart').getContext('2d');
-                if (usageChartInstance) {
-                    usageChartInstance.destroy();
-                }
-                const usageChartData = {
-                    labels: data.data.map(item => item.date),
-                    datasets: [
-                        {
-                            label: '用电量',
-                            data: data.data.map(item => item.elec_usage),
-                            borderColor: 'rgba(75, 192, 192, 1)',
-                            borderWidth: 2,
-                            fill: false,
-                            yAxisID: 'y1',
-                        },
-                        {
-                            label: '电费',
-                            data: data.data.map(item => item.elec_charge),
-                            backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                            borderColor: 'rgba(255, 99, 132, 1)',
-                            borderWidth: 1,
-                            barThickness: 20,
-                            barPercentage: 0.2,
-                            type: 'bar',
-                            yAxisID: 'y2',
-                        },
-                    ]
-                };
-                const chartOptions = {
-                    responsive: true,
-                    plugins: {
-                        legend: {
-                            position: 'top',
-                        },
-                        tooltip: {
-                            mode: 'index',
-                            intersect: false,
-                        }
-                    },
-                    scales: {
-                        y1: {
-                            type: 'linear',
-                            position: 'left',
-                            beginAtZero: true,
-                            ticks: {
-                                beginAtZero: true
-                            },
-                            scaleLabel: {
-                                display: true,
-                                labelString: '用电量'
-                            }
-                        },
-                        y2: {
-                            type: 'linear',
-                            position: 'right',
-                            beginAtZero: true,
-                            ticks: {
-                                beginAtZero: true
-                            },
-                            scaleLabel: {
-                                display: true,
-                                labelString: '电费'
-                            },
-                            grid: {
-                                drawOnChartArea: false
-                            }
-                        }
-                    }
-                };
-                usageChartInstance = new Chart(ctx, {
-                    type: 'line',
-                    data: usageChartData,
-                    options: chartOptions,
-                });
-            }
-        }
-
-        function getLast60Days() {
-            const today = new Date();
-            const endDate = today.toISOString().split('T')[0];
-
-            today.setDate(today.getDate() - 60 + 1);
-            const startDate = today.toISOString().split('T')[0];
-
-            return { startDate, endDate };
-        }
-
-        function updateData() {
-            const residentId = document.getElementById('residentSelector').value;
-            const dateRange = document.getElementById('dateRange').value.split(' to ');
-            const startDate = dateRange[0];
-            const endDate = dateRange[1];
-
-            if (residentId) {
-                fetchLatestBalanceData(residentId);
-            }
-        }
-
-        // 初始化页面
-        function init() {
-            fetchResidents();
-
-            const { startDate, endDate } = getLast60Days();
-            flatpickr("#dateRange", {
-                mode: "range",
-                dateFormat: "Y-m-d",
-                defaultDate: [startDate, endDate],
-                firstDayOfWeek: 1
-            });
-
-            document.getElementById('fetchBalanceBtn').addEventListener('click', () => {
-                const residentId = document.getElementById('residentSelector').value;
-                const dateRange = document.getElementById('dateRange').value.split(' to ');
-                const startDate = dateRange[0];
-                const endDate = dateRange[1];
-
-                if (residentId) {
-                    fetchLatestBalanceData(residentId);
-                    fetchDailyUsageData(residentId, startDate, endDate);
-                } else {
-                    alert('请填写所有筛选条件');
-                }
-            });
-        }
-
-        window.onload = init;
-    </script>
+<script></script>
 </body>
 </html>
